--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mocha": "^3.1.2"
   },
   "dependencies": {
-    "bluebird": "^3.4.6",
+    "axios": "^0.17.1",
+    "bluebird": "^3.5.1",
+    "qs": "^6.5.1",
     "request": "^2.78.0"
   }
 }
