--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha test"
+    "test": "mocha test"
   },
   "author": "Florian Schmidt <florian.schmidt.1994@icloud.com>",
   "license": "AGPL-3.0",
